don't crash when deleting items

Weird things happened in feed.cpp:772:

772: emit signalArticlesRemoved(this, d->removedArticlesNotify);
773: d->removedArticlesNotify.clear();

It seems clear() was called before the signal was finally handled by articlelist. (due to some delayed 
signal forwarding me thinks)
Also, the signal emit doesn't actually copy the list (not even on write), so the clear() breaks the 
refcounting in Article::d somehow, deleting the last Article referencing the Article::Private object of the 
deleted article. 
=> ArticleListView operates on Article objects with invalid d pointers.

BUG: 112932

svn path=/branches/KDE/3.5/kdepim/; revision=463464