src/akregator_view.cpp
@@ -1304,7 +1304,10 @@ void View::slotArticleDelete()
         }
 
         for (QValueList<Feed*>::Iterator it = feeds.begin(); it != feeds.end(); ++it)
+        {
             (*it)->setNotificationMode(true);
+        }
+
         if (m_listTabWidget->activeView()->selectedNode())
             m_listTabWidget->activeView()->selectedNode()->setNotificationMode(true);
     }
